button mobile click fix, border-radius variable.

--- a/src/box/box.scss
+++ b/src/box/box.scss
@@ -19,7 +19,7 @@
     padding: .5rem .625rem .5rem .375rem;
     background: var(--background-color, #fff);
     border: .0625rem solid var(--border-color, rgba(0, 0, 0, 0.25));
-    border-radius: .25rem;
+    border-radius: var(--border-radius, .25rem);
     transition: border .35s cubic-bezier(0,0,.2,1);
   }
 
